[package]
name = "distant-ssh"
description = "Library to enable SSH protocol for use with distant sessions"
categories = ["network-programming"]
version.workspace = true
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2024"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license.workspace = true

[features]
default = []

[dependencies]
async-once-cell = "0.5.4"
derive_more = { version = "2.1.1", default-features = false, features = ["display", "error"] }
dirs = "5.0.1"
distant-core = { workspace = true }
futures = "0.3.32"
hex = "0.4.3"
log = "0.4.29"
rand = "0.8.5"
rpassword = "7.4.0"
russh = { version = "0.57", default-features = false, features = ["ring"] }
russh-sftp = "2.1"
shell-words = "1.1.1"
ssh2-config-rs = "0.7"
tokio = { version = "1.50.0", features = ["full"] }
typed-path = "0.12.3"
whoami = "2.1.1"
winsplit = "0.1.0"

# Optional serde support for data structures
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.102"
assert_fs = "1.1.3"
distant-test-harness = { path = "../distant-test-harness" }
dunce = "1.0.5"
env_logger = "0.11.9"
indoc = "2.0.7"
predicates = "3.1.4"
rstest = "0.26.1"
test-log = "0.2.19"
which = "8.0.0"
whoami = "2.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }
