[package]
name = "distant-ssh2"
description = "Library to enable native ssh-2 protocol for use with distant sessions"
categories = ["network-programming"]
version = "0.20.0-alpha.4"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = ["libssh", "ssh2"]
libssh = ["wezterm-ssh/libssh-rs", "wezterm-ssh/vendored-openssl-libssh-rs"]
ssh2 = ["wezterm-ssh/ssh2", "wezterm-ssh/vendored-openssl-ssh2"]

[dependencies]
async-compat = "0.2.1"
async-once-cell = "0.4.2"
async-trait = "0.1.58"
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error"] }
distant-core = { version = "=0.20.0-alpha.4", path = "../distant-core" }
futures = "0.3.25"
hex = "0.4.3"
log = "0.4.17"
rand = { version = "0.8.5", features = ["getrandom"] }
rpassword = "7.1.0"
shell-words = "1.1.0"
smol = "1.2.5"
tokio = { version = "1.22.0", features = ["full"] }
typed-path = "0.1.0"
wezterm-ssh = { version = "0.4.0", default-features = false }
winsplit = "0.1.0"

# Optional serde support for data structures
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.66"
assert_fs = "1.0.9"
dunce = "1.0.3"
env_logger = "0.9.3"
indoc = "1.0.7"
once_cell = "1.16.0"
predicates = "2.1.3"
rstest = "0.15.0"
test-log = "0.2.11"
which = "4.3.0"
whoami = "1.2.3"
