[package]
name = "distant-test-harness"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = []
docker = ["dep:distant-docker", "dep:bollard"]

[dependencies]
distant-core = { path = "../distant-core" }
distant-host = { path = "../distant-host" }
distant-ssh = { path = "../distant-ssh", default-features = false, features = ["serde"] }
distant-docker = { path = "../distant-docker", optional = true }
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
bollard = { version = "0.20", optional = true }
derive_more = { version = "2.1.1", default-features = false, features = ["display", "deref", "deref_mut"] }
futures = "0.3.32"
indoc = "2"
log = "0.4"
predicates = "3"
rstest = "0.26"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whoami = "2"
which = "8"
portable-pty = "0.9.0"
rand = "0.8"
rpassword = "7.4.0"
ctrlc = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "pty-echo"
path = "src/bin/pty_echo.rs"

[[bin]]
name = "pty-password"
path = "src/bin/pty_password.rs"

[[bin]]
name = "pty-interactive"
path = "src/bin/pty_interactive.rs"

[[bin]]
name = "tcp-to-stdio"
path = "src/bin/tcp_to_stdio.rs"

[[bin]]
name = "tcp-echo-server"
path = "src/bin/tcp_echo_server.rs"

[lints]
workspace = true
